Kimi fixes the backend

--- a/index.html
+++ b/index.html
@@ -204,13 +204,10 @@
                     <p class="text-xl text-text-secondary mb-8 leading-relaxed">
                         集成yt-dlp和ffmpeg的强大功能，支持1000+网站视频下载、专业视频编辑、音频格式转换等完整媒体处理工作流。
                     </p>
-                    <div class="flex flex-col sm:flex-row gap-4">
-                        <button class="btn-primary px-8 py-4 rounded-lg font-semibold text-lg">
-                            开始下载
-                        </button>
-                        <button class="border border-accent text-accent px-8 py-4 rounded-lg font-semibold text-lg hover:bg-accent hover:text-white transition-all">
-                            了解更多
-                        </button>
+                    <div class="text-center">
+                        <p class="text-lg text-text-secondary">
+                            专业媒体处理，一站式解决方案
+                        </p>
                     </div>
                 </div>
                 <div class="fade-in">
